// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enhanceHanson allows defining variables in result 1`] = `
{
  "$type": "requirement",
  "Req": {
    "$type": "requirement",
    "result": {
      "$count": {
        "$num": 1,
        "$operator": "$gte",
      },
      "$of": [
        {
          "$course": {
            "department": "MATH",
            "number": 330,
          },
          "$type": "course",
        },
        {
          "$course": {
            "department": "MATH",
            "number": 340,
          },
          "$type": "course",
        },
        {
          "$course": {
            "department": "MATH",
            "number": 344,
          },
          "$type": "course",
        },
        {
          "$course": {
            "department": "MATH",
            "number": 348,
          },
          "$type": "course",
        },
        {
          "$course": {
            "department": "MATH",
            "number": 351,
          },
          "$type": "course",
        },
        {
          "$course": {
            "department": "MATH",
            "number": 356,
          },
          "$type": "course",
        },
        {
          "$course": {
            "department": "MATH",
            "number": 364,
          },
          "$type": "course",
        },
        {
          "$course": {
            "department": "MATH",
            "number": 382,
          },
          "$type": "course",
        },
        {
          "$course": {
            "department": "MATH",
            "number": 384,
          },
          "$type": "course",
        },
      ],
      "$type": "of",
    },
  },
  "name": undefined,
  "result": {
    "$requirement": "Req",
    "$type": "reference",
  },
  "revision": undefined,
  "slug": "",
  "type": undefined,
}
`;

exports[`enhanceHanson allows using variables in the filter 1`] = `
{
  "$type": "requirement",
  "Req": {
    "$type": "requirement",
    "filter": {
      "$distinct": false,
      "$filterType": "of",
      "$of": [
        {
          "$course": {
            "department": "MATH",
            "number": 330,
          },
          "$type": "course",
        },
        {
          "$course": {
            "department": "MATH",
            "number": 340,
          },
          "$type": "course",
        },
        {
          "$course": {
            "department": "MATH",
            "number": 344,
          },
          "$type": "course",
        },
        {
          "$course": {
            "department": "MATH",
            "number": 348,
          },
          "$type": "course",
        },
        {
          "$course": {
            "department": "MATH",
            "number": 351,
          },
          "$type": "course",
        },
        {
          "$course": {
            "department": "MATH",
            "number": 356,
          },
          "$type": "course",
        },
        {
          "$course": {
            "department": "MATH",
            "number": 364,
          },
          "$type": "course",
        },
        {
          "$course": {
            "department": "MATH",
            "number": 382,
          },
          "$type": "course",
        },
        {
          "$course": {
            "department": "MATH",
            "number": 384,
          },
          "$type": "course",
        },
      ],
      "$type": "filter",
    },
  },
  "name": undefined,
  "result": {
    "$requirement": "Req",
    "$type": "reference",
  },
  "revision": undefined,
  "slug": "",
  "type": undefined,
}
`;

exports[`enhanceHanson expands string-only keys into objects with a "result" key 1`] = `
{
  "$type": "requirement",
  "Requirement": {
    "$type": "requirement",
    "result": {
      "$course": {
        "department": "CSCI",
        "number": 121,
      },
      "$type": "course",
    },
  },
  "name": undefined,
  "result": {
    "$requirement": "Requirement",
    "$type": "reference",
  },
  "revision": undefined,
  "slug": "",
  "type": undefined,
}
`;

exports[`enhanceHanson parses "filter" strings with the Filter PEG rule 1`] = `
{
  "$type": "requirement",
  "Req": {
    "$type": "requirement",
    "filter": {
      "$distinct": false,
      "$filterType": "of",
      "$of": [
        {
          "$course": {
            "department": "CSCI",
            "number": 121,
          },
          "$type": "course",
        },
      ],
      "$type": "filter",
    },
  },
  "name": undefined,
  "result": {
    "$requirement": "Req",
    "$type": "reference",
  },
  "revision": undefined,
  "slug": "",
  "type": undefined,
}
`;

exports[`enhanceHanson parses "result" strings with the Result PEG rule 1`] = `
{
  "$type": "requirement",
  "Req": {
    "$type": "requirement",
    "result": {
      "$count": {
        "$num": 1,
        "$operator": "$gte",
      },
      "$of": [
        {
          "$course": {
            "department": "CSCI",
            "number": 121,
          },
          "$type": "course",
        },
      ],
      "$type": "of",
    },
  },
  "name": undefined,
  "result": {
    "$requirement": "Req",
    "$type": "reference",
  },
  "revision": undefined,
  "slug": "",
  "type": undefined,
}
`;
